trunk/Archive2/c4/3cb83137794da6/output
main.cpp: In function 'int main()':
main.cpp:19:13: error: 'B' is not a base of 'A'
   ptr_a->B::print();
             ^
